--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -15,45 +15,101 @@
 
 * {
     margin: 0px;
+    font-size: 1em;
 }
 
 body {
-    max-height: 100vh;
+    font-family: var(--fonte3);
+    color: black;
+    height: 100vh;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
+    height: 25vw;
     background-color: black;
     color: white;
-    align-items: center;
-    justify-content: center;
-}
-header h1 {
-    
-    font-family: var(--fonte1);
-    font-size: 10vw;
-    
-}
-header p {
-    font-family: var(--fonte3);
-    text-align: center;
 }
 
-header a {
+header h1 {
+    font-family: var(--fonte1);
+    font-size: 10vw;
+    font-variant: small-caps;
+    text-align: center;
+    padding-top: 5vw;
+}
+
+header p{
+    font-family: var(--fonte3);
+    text-align: center;
+    font-size: 0.4em;
+    padding-bottom: 5vw;
+}
+
+header a, footer a {
     text-decoration: none;
     color: white;
     font-weight: bold;
+    font-size: 1em;
 }
-header a:hover {
+
+header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
-div#verso1 {
-    background: white no-repeat center center fixed;
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 15px;
+    line-height: 2em;
+    font-size: 3.5vw;
+    font-family: var(--fonte2);
 }
-div#verso2 {
-    background: white url("../imagens/background001.jpg") no-repeat center center fixed;
+
+section > p {
+   padding-bottom: 2em;
+}
+
+section.imagem {
+    background-color: rgba(0, 0, 0, 0.473);
+    color: white;
+    background-size: cover;
+    background-attachment: fixed;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.164);
+}
+
+section.imagem > p {
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.521);
+    text-shadow: 1px 1px 0px black;
+}
+
+
+section#img01 {
+    background-image: url("../imagens/background001.jpg");
+    background-position: right center;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 
+
+section#img02 {
+
+    background-image: url("../imagens/background002.jpg");
+    background-position: right center;
+    background-color: white;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px;
+    font-size: 6px;
+    
+}
