--- a/desafios/d015/estilos/style.css
+++ b/desafios/d015/estilos/style.css
@@ -6,6 +6,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+    height: 0px;
+    width: 0px;
+}
+
 html, body {
     height: 100vh;
     width: 100vw;
@@ -37,16 +42,16 @@ div#telefone {
 div#telefone > iframe {
     position: relative;
     top: 80px;
-    left: 7%;
+    left: 8%;
 
     height: 471px;
-    width: 268px;
+    width: 265px;
 }
 
 div#sidebar {
     position: absolute;
     top: 0%;
-    left: 90%;
+    left: 87vw;
     width: 60px;
 }
 
